--- a/app/src/main/res/layout/activity_content_show.xml
+++ b/app/src/main/res/layout/activity_content_show.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CsContentActivity">
+    tools:context=".ContentShowActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id='@+id/cs_content_back'
+                android:id='@+id/cs_content_show_back'
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
@@ -64,29 +64,42 @@
 
             </TextView>
 
-            <ScrollView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="35dp"
-                android:background="@color/white">
+                android:background="@color/white"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/t_cs_content"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="25dp"
                     android:layout_marginTop="0dp"
                     android:layout_marginRight="25dp"
-                    android:text=""
+                    android:text="课时安排:1-17周\n\n课程图片"
                     android:textColor="@color/black"
                     android:textSize="20sp">
 
                 </TextView>
 
-            </ScrollView>
+                <TextView
+                    android:id="@+id/pic"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="25dp"
+                    android:text="\n"
+                    android:background="@drawable/img_bird">
+
+                </TextView>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
