--- a/app/src/main/res/layout/activity_todo_add.xml
+++ b/app/src/main/res/layout/activity_todo_add.xml
@@ -46,12 +46,12 @@
         android:maxLines="10"
         android:minLines="8"
         android:scrollbars="vertical"
-        android:text="输入的内容"
+        android:hint="输入内容"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/preserve_btn_add"
+        android:id="@+id/todo_preserve"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
