--- a/app/src/main/res/layout/fragment_myself.xml
+++ b/app/src/main/res/layout/fragment_myself.xml
@@ -22,22 +22,27 @@
             android:layout_marginBottom="40dp"
             android:src="@drawable/temp" />
 
-        <TextView
-            android:id="@+id/tv_name"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:text="昵称："
-            android:textColor="#353535"
-            android:textSize="20sp"
-             />
-        <TextView
-            android:id="@+id/yonghuming"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp">
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="60dp"
+                android:text="昵称："
+                android:textColor="#353535"
+                android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/yonghuming"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="       e+"
+                android:textColor="#353535"
+                android:textSize="36sp"/>
+        </LinearLayout>
 
-            android:textColor="#353535"
-            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="match_parent"
